# Karasu

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: karasu-core.mdc  karasu-documentation.mdc  karasu-rust.mdc  karasu-typescript.mdc
.cursor/skills/karasu-feature/: SKILL.md  reference.md
.cursor/skills/karasu-pr/: SKILL.md
.cursor/skills/karasu-preview/: SKILL.md
docs/: README.md  csv-spreadsheet.md  design-decisions.md  syntax-highlighting.md  tray-icon-macos.md
docs/samples/: gfm-mermaid.md
docs/superpowers/specs/: 2026-06-03-tauri-markdown-viewer-design.md
src/: main.ts  markdown.ts  mermaid-preview.ts  session-state.ts  settings.ts  sidebar-layout.ts  sidebar.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  dir.rs  fonts.rs  lib.rs  lifecycle.rs  main.rs  memory.rs  recent.rs  search.rs  tray.rs  watch.rs  workspace.rs
src-tauri/src/csv/: index.rs  mod.rs  scanner.rs  session.rs
src/app/: activity-bar.ts  chrome.ts  editor-mode.ts  lifecycle.ts  toolbar.ts
src/core/: devtools-utils.ts  editor-controller.ts  file-kind.ts  fonts.ts  json-schema.ts  jwt-decode.ts  toml.ts  yaml.ts
src/features/convert/: editor.ts
src/features/csv/: api.ts  editor.ts  spreadsheet.ts
src/features/devtools/: editor.ts
src/features/json/: editor.ts  tree-view.ts
src/styles/: app.css  convert-editor.css  csv-editor.css  devtools-editor.css  json-editor.css  jwt-editor.css  markdown-editor.css  toml-editor.css  yaml-editor.css
(+8 files in other folders)
