[package]
name = "karasu"
version = "0.1.0"
description = "超軽量 Markdown ビューワー"
authors = ["pochy"]
license = "MIT"
edition = "2021"

[lib]
name = "karasu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"
notify = "8"
image = "0.25"

[dev-dependencies]
tempfile = "3"
